--- a/contrib/gitian-descriptors/gitian.yml
+++ b/contrib/gitian-descriptors/gitian.yml
@@ -19,9 +19,7 @@ packages:
 - "pkg-config"
 - "libpng12-dev"
 reference_datetime: "2011-01-30 00:00:00"
-remotes:
-- "url": "https://github.com/zvrcoin-project/zvrcoin.git"
-  "dir": "zvrcoin"
+remotes: []
 files:
 - "miniupnpc-1.9.20140401.tar.gz"
 - "qrencode-3.4.3.tar.bz2"
@@ -44,9 +42,10 @@ script: |
   make $MAKEOPTS install
   cd ..
   #
+  unzip zvrcoin.zip
+  cp -r zvrcoin $OUTDIR/src
+  cp -r zvrcoin zvrcoin nsis
   cd zvrcoin
-  mkdir -p $OUTDIR/src
-  git archive HEAD | tar -x -C $OUTDIR/src
   cp $OUTDIR/src/doc/README.md $OUTDIR
   cp $OUTDIR/src/COPYING $OUTDIR
   cd src
